- Update invalid maven assembler plugin option in parent pom - Instantiate with Constructor to get InvocationTargetException
git-svn-id: https://svn.apache.org/repos/asf/turbine/fulcrum/trunk/json@1656417 13f79535-47bb-0310-9956-ffa450edef68